--- a/styles.css
+++ b/styles.css
@@ -70,10 +70,10 @@ button:hover {
 
 #imc-value {
     font-weight: bold;
-    color: #333;
+    color: #cf860f;
 }
 
 #category {
     font-weight: bold;
-    color: #333;
+    color: #cf860f;
 }
