Mudança de fundo

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url("blazar.jpg");
+    background-image: url("blazer.jpg");
     background-repeat: no-repeat;
     display: flex;
     justify-content: center;
